--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,3 +109,14 @@ body {
     transform: scale(1);
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
