--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,12 @@ body {
 *::before,
 *::after {
   box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 @layer base {
